--- a/src/views/landing/LandingView.css
+++ b/src/views/landing/LandingView.css
@@ -1,1 +1,7 @@
-
+.landing-page {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+  justify-content: center;
+}
