implement threads and messages

--- a/src/components/thread/ThreadListItem.css
+++ b/src/components/thread/ThreadListItem.css
@@ -1,7 +1,19 @@
-.item-container {
+/* .item-container {
   transition: transform 0.3s ease;
 }
 
 .item-container:hover {
   transform: scale(1.05);
+} */
+
+.list-item-link {
+  color: var(--navy-blue);
+}
+
+.list-item-link:hover {
+  color: var(--forest-green);
+}
+
+.list-group-item {
+  background-color: var(--forest-green);
 }
