--- a/src/components/header/CustomHeader.css
+++ b/src/components/header/CustomHeader.css
@@ -1,5 +1,5 @@
 .custom-header {
-  /* text-align: center; */
+  text-align: center;
   border-radius: 5px;
   font-weight: 600;
 }
@@ -18,4 +18,8 @@
 
 .custom-header.xlg {
   font-size: 48px;
+}
+
+.alignLeft {
+  text-align: left;
 }
