--- a/src/components/card/CustomCard.css
+++ b/src/components/card/CustomCard.css
@@ -7,6 +7,7 @@
   margin-bottom: 8px;
   transition: transform 0.3s ease;
   border-radius: 30px;
+  border: 1px solid black;
 }
 
 .custom-card:hover {
